# koma

./: .gitignore  .readthedocs.yml  LICENSE  README.md  README.rst  pyproject.toml  setup.py
+koma/: maxreal.m
+koma/+modal/: cpsd_from_fdd_result.m  dynamic_amplification.m  find_stable_poles.m  frf_estimator.m  mpc.m  pick_stable_modes.m  resasref.m  sort_fdd.m  unique_modes.m  xmacmat.m
+koma/+oma/: covssi.m  ddssi.m  fdd.m  sort_fdd.m
+koma/+spectral/: cpsd_matrix.m  smooth_3d.m
.github/: deploy-gh-pages.sh
docs/: .buildinfo  acknowledgements.html  acknowledgements.rst  code_matlab.html  code_python.html  conf.py  examples.html  genindex.html  index.html  index.md  index.rst  installation.html  licensing.html  licensing.rst  mat-modindex.html  matlab_example.html  matlab_example_1.html  objects.inv  py-modindex.html  python_example.html  python_example.ipynb  python_example_1.html  python_example_1.ipynb  ref.bib  references.html  requirements.txt  search.html  searchindex.js
docsrc/: Makefile  conf.py
examples/: Automatic OMA - Shear frame.ipynb  Cov-SSI - Shear frame (precomputed data).ipynb  Cov-SSI - Shear frame.ipynb  FDD - Shear frame (precomputed data).ipynb  Mode visualization (simple example).ipynb  Mode visualization.ipynb  Quantify lags and syncronize data.ipynb  Stabilization analysis example.ipynb  The concept of stabilization analysis.ipynb  data_shearframe.npy
koma/: __init__.py  _aoma.py  clustering.py  modal.py  oma.py  plot.py  signal.py  spatial.py
koma_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+74 files in other folders)
