[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "koma-python"
description = "Knuts Operational Modal Analysis"
requires-python = ">= 3.6"

readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Knut A. Kvaale", email = "knut.a.kvale@ntnu.no"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = ["plotly", "pandas", "numpy", "pyvista[jupyter]>=0.38.1",
                      "scikit-learn", "trame", "ipywidgets", "pyvistaqt"]


[tool.setuptools]
packages = ["koma"]

[tool.setuptools.dynamic]
version = {attr = "koma.__version__"}

[project.urls]
repository = "https://github.com/knutankv/koma"
documentation = "https://knutankv.github.io/koma/"
